proj2/Code/syntax.output
State 28 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | Specifier error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | STRUCT OptTag LC error RC
   16                | STRUCT error LC DefList RC
   17                | STRUCT error

   18 OptTag: ID
   19       | %empty

   20 Tag: ID

   21 VarDec: ID
   22       | VarDec LB INT RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP
   25       | ID LP error RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC
   30       | LC error StmtList RC

   31 StmtList: Stmt StmtList
   32         | %empty

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | WHILE LP Exp RP Stmt
   39     | error SEMI
   40     | RETURN error SEMI
   41     | IF LP error RP Stmt
   42     | IF LP error RP Stmt ELSE Stmt
   43     | WHILE LP error RP Stmt
   44     | Exp error
   45     | RETURN Exp error

   46 DefList: Def DefList
   47        | %empty

   48 Def: Specifier DecList SEMI
   49    | Specifier error SEMI

   50 DecList: Dec
   51        | Dec COMMA DecList

   52 Dec: VarDec
   53    | VarDec ASSIGNOP Exp

   54 Exp: Exp ASSIGNOP Exp
   55    | Exp AND Exp
   56    | Exp OR Exp
   57    | Exp RELOP Exp
   58    | Exp PLUS Exp
   59    | Exp MINUS Exp
   60    | Exp STAR Exp
   61    | Exp DIV Exp
   62    | LP Exp RP
   63    | MINUS Exp
   64    | NOT Exp
   65    | ID LP Args RP
   66    | ID LP RP
   67    | Exp LB Exp RB
   68    | Exp DOT ID
   69    | ID
   70    | INT
   71    | FLOAT
   72    | Exp ASSIGNOP error
   73    | Exp AND error
   74    | Exp OR error
   75    | Exp RELOP error
   76    | Exp PLUS error
   77    | Exp MINUS error
   78    | Exp STAR error
   79    | Exp DIV error
   80    | NOT error

   81 Args: Exp COMMA Args
   82     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 15 16 17 25 30 39 40 41 42 43 44 45 49 72 73 74 75 76 77 78 79 80
    STRUCT <node> (258) 13 14 15 16 17
    RETURN <node> (259) 35 40 45
    IF <node> (260) 36 37 41 42
    ELSE <node> (261) 37 42
    WHILE <node> (262) 38 43
    TYPE <node> (263) 11
    INT <node> (264) 22 70
    FLOAT <node> (265) 71
    ID <node> (266) 18 20 21 23 24 25 65 66 68 69
    SEMI <node> (267) 4 5 7 8 33 35 39 40 48 49
    COMMA <node> (268) 10 26 51 81
    ASSIGNOP <node> (269) 53 54 72
    RELOP <node> (270) 57 75
    PLUS <node> (271) 58 76
    MINUS <node> (272) 59 63 77
    STAR <node> (273) 60 78
    DIV <node> (274) 61 79
    AND <node> (275) 55 73
    OR <node> (276) 56 74
    DOT <node> (277) 68
    NOT <node> (278) 64 80
    LP <node> (279) 23 24 25 36 37 38 41 42 43 62 65 66
    RP <node> (280) 23 24 25 36 37 38 41 42 43 62 65 66
    LB <node> (281) 22 67
    RB <node> (282) 22 67
    LC <node> (283) 13 15 16 29 30
    RC <node> (284) 13 15 16 29 30
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <node> (32)
        on left: 1
        on right: 0
    ExtDefList <node> (33)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (34)
        on left: 4 5 6 7 8
        on right: 2
    ExtDecList <node> (35)
        on left: 9 10
        on right: 4 10
    Specifier <node> (36)
        on left: 11 12
        on right: 4 5 6 7 8 28 48 49
    StructSpecifier <node> (37)
        on left: 13 14 15 16 17
        on right: 12
    OptTag <node> (38)
        on left: 18 19
        on right: 13 15
    Tag <node> (39)
        on left: 20
        on right: 14
    VarDec <node> (40)
        on left: 21 22
        on right: 9 10 22 28 52 53
    FunDec <node> (41)
        on left: 23 24 25
        on right: 6 7
    VarList <node> (42)
        on left: 26 27
        on right: 23 26
    ParamDec <node> (43)
        on left: 28
        on right: 26 27
    CompSt <node> (44)
        on left: 29 30
        on right: 6 34
    StmtList <node> (45)
        on left: 31 32
        on right: 29 30 31
    Stmt <node> (46)
        on left: 33 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 31 36 37 38 41 42 43
    DefList <node> (47)
        on left: 46 47
        on right: 13 16 29 46
    Def <node> (48)
        on left: 48 49
        on right: 46
    DecList <node> (49)
        on left: 50 51
        on right: 48 51
    Dec <node> (50)
        on left: 52 53
        on right: 50 51
    Exp <node> (51)
        on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
        on right: 33 35 36 37 38 44 45 53 54 55 56 57 58 59 60 61 62 63 64 67 68 72 73 74 75 76 77 78 79 81 82
    Args <node> (52)
        on left: 81 82
        on right: 65 81


State 0

    0 $accept: . Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag
   15                | STRUCT . OptTag LC error RC
   16                | STRUCT . error LC DefList RC
   17                | STRUCT . error

    error  shift, and go to state 8
    ID     shift, and go to state 9

    LC  reduce using rule 19 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    8       | Specifier . error SEMI

    error  shift, and go to state 14
    ID     shift, and go to state 15
    SEMI   shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 8

   16 StructSpecifier: STRUCT error . LC DefList RC
   17                | STRUCT error .

    LC  shift, and go to state 20

    $default  reduce using rule 17 (StructSpecifier)


State 9

   18 OptTag: ID .
   20 Tag: ID .

    LC        reduce using rule 18 (OptTag)
    $default  reduce using rule 20 (Tag)


State 10

   13 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 21


State 11

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 14

    8 ExtDef: Specifier error . SEMI

    SEMI  shift, and go to state 22


State 15

   21 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP
   25       | ID . LP error RP

    LP  shift, and go to state 23

    $default  reduce using rule 21 (VarDec)


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 18

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   22 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 9 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 27
    LC    shift, and go to state 28

    CompSt  go to state 29


State 20

   16 StructSpecifier: STRUCT error LC . DefList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 31
    Def              go to state 32


State 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC
   15                | STRUCT OptTag LC . error RC

    error   shift, and go to state 33
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    RC  reduce using rule 47 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 34
    Def              go to state 32


State 22

    8 ExtDef: Specifier error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 23

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP
   25       | ID LP . error RP

    error   shift, and go to state 35
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2
    RP      shift, and go to state 36

    Specifier        go to state 37
    StructSpecifier  go to state 7
    VarList          go to state 38
    ParamDec         go to state 39


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 40

    ExtDecList  go to state 41
    VarDec      go to state 18


State 26

   22 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 42


State 27

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 28

   29 CompSt: LC . DefList StmtList RC
   30       | LC . error StmtList RC

    error   shift, and go to state 43
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    error   [reduce using rule 47 (DefList)]
    RETURN  reduce using rule 47 (DefList)
    IF      reduce using rule 47 (DefList)
    WHILE   reduce using rule 47 (DefList)
    INT     reduce using rule 47 (DefList)
    FLOAT   reduce using rule 47 (DefList)
    ID      reduce using rule 47 (DefList)
    MINUS   reduce using rule 47 (DefList)
    NOT     reduce using rule 47 (DefList)
    LP      reduce using rule 47 (DefList)
    LC      reduce using rule 47 (DefList)
    RC      reduce using rule 47 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 44
    Def              go to state 32


State 29

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 30

   48 Def: Specifier . DecList SEMI
   49    | Specifier . error SEMI

    error  shift, and go to state 45
    ID     shift, and go to state 40

    VarDec   go to state 46
    DecList  go to state 47
    Dec      go to state 48


State 31

   16 StructSpecifier: STRUCT error LC DefList . RC

    RC  shift, and go to state 49


State 32

   46 DefList: Def . DefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 50
    Def              go to state 32


State 33

   15 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 51


State 34

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 52


State 35

   25 FunDec: ID LP error . RP

    RP  shift, and go to state 53


State 36

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 37

   28 ParamDec: Specifier . VarDec

    ID  shift, and go to state 40

    VarDec  go to state 54


State 38

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 55


State 39

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 56

    $default  reduce using rule 27 (VarList)


State 40

   21 VarDec: ID .

    $default  reduce using rule 21 (VarDec)


State 41

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 42

   22 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 57


State 43

   30 CompSt: LC error . StmtList RC

    error   shift, and go to state 58
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    INT     shift, and go to state 62
    FLOAT   shift, and go to state 63
    ID      shift, and go to state 64
    MINUS   shift, and go to state 65
    NOT     shift, and go to state 66
    LP      shift, and go to state 67
    LC      shift, and go to state 28

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 69
    Stmt      go to state 70
    Exp       go to state 71


State 44

   29 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 58
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    INT     shift, and go to state 62
    FLOAT   shift, and go to state 63
    ID      shift, and go to state 64
    MINUS   shift, and go to state 65
    NOT     shift, and go to state 66
    LP      shift, and go to state 67
    LC      shift, and go to state 28

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 72
    Stmt      go to state 70
    Exp       go to state 71


State 45

   49 Def: Specifier error . SEMI

    SEMI  shift, and go to state 73


State 46

   22 VarDec: VarDec . LB INT RB
   52 Dec: VarDec .
   53    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 74
    LB        shift, and go to state 26

    $default  reduce using rule 52 (Dec)


State 47

   48 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 75


State 48

   50 DecList: Dec .
   51        | Dec . COMMA DecList

    COMMA  shift, and go to state 76

    $default  reduce using rule 50 (DecList)


State 49

   16 StructSpecifier: STRUCT error LC DefList RC .

    $default  reduce using rule 16 (StructSpecifier)


State 50

   46 DefList: Def DefList .

    $default  reduce using rule 46 (DefList)


State 51

   15 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 15 (StructSpecifier)


State 52

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 53

   25 FunDec: ID LP error RP .

    $default  reduce using rule 25 (FunDec)


State 54

   22 VarDec: VarDec . LB INT RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 28 (ParamDec)


State 55

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 56

   26 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 37
    StructSpecifier  go to state 7
    VarList          go to state 77
    ParamDec         go to state 39


State 57

   22 VarDec: VarDec LB INT RB .

    $default  reduce using rule 22 (VarDec)


State 58

   39 Stmt: error . SEMI

    SEMI  shift, and go to state 78


State 59

   35 Stmt: RETURN . Exp SEMI
   40     | RETURN . error SEMI
   45     | RETURN . Exp error

    error  shift, and go to state 79
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 80


State 60

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt
   41     | IF . LP error RP Stmt
   42     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 81


State 61

   38 Stmt: WHILE . LP Exp RP Stmt
   43     | WHILE . LP error RP Stmt

    LP  shift, and go to state 82


State 62

   70 Exp: INT .

    $default  reduce using rule 70 (Exp)


State 63

   71 Exp: FLOAT .

    $default  reduce using rule 71 (Exp)


State 64

   65 Exp: ID . LP Args RP
   66    | ID . LP RP
   69    | ID .

    LP  shift, and go to state 83

    $default  reduce using rule 69 (Exp)


State 65

   63 Exp: MINUS . Exp

    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 84


State 66

   64 Exp: NOT . Exp
   80    | NOT . error

    error  shift, and go to state 85
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 86


State 67

   62 Exp: LP . Exp RP

    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 87


State 68

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 69

   30 CompSt: LC error StmtList . RC

    RC  shift, and go to state 88


State 70

   31 StmtList: Stmt . StmtList

    error   shift, and go to state 58
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    INT     shift, and go to state 62
    FLOAT   shift, and go to state 63
    ID      shift, and go to state 64
    MINUS   shift, and go to state 65
    NOT     shift, and go to state 66
    LP      shift, and go to state 67
    LC      shift, and go to state 28

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 89
    Stmt      go to state 70
    Exp       go to state 71


State 71

   33 Stmt: Exp . SEMI
   44     | Exp . error
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error

    error     shift, and go to state 90
    SEMI      shift, and go to state 91
    ASSIGNOP  shift, and go to state 92
    RELOP     shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    LB        shift, and go to state 101


State 72

   29 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 102


State 73

   49 Def: Specifier error SEMI .

    $default  reduce using rule 49 (Def)


State 74

   53 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 103


State 75

   48 Def: Specifier DecList SEMI .

    $default  reduce using rule 48 (Def)


State 76

   51 DecList: Dec COMMA . DecList

    ID  shift, and go to state 40

    VarDec   go to state 46
    DecList  go to state 104
    Dec      go to state 48


State 77

   26 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 26 (VarList)


State 78

   39 Stmt: error SEMI .

    $default  reduce using rule 39 (Stmt)


State 79

   40 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 105


State 80

   35 Stmt: RETURN Exp . SEMI
   45     | RETURN Exp . error
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error

    error     shift, and go to state 106
    SEMI      shift, and go to state 107
    ASSIGNOP  shift, and go to state 92
    RELOP     shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    LB        shift, and go to state 101


State 81

   36 Stmt: IF LP . Exp RP Stmt
   37     | IF LP . Exp RP Stmt ELSE Stmt
   41     | IF LP . error RP Stmt
   42     | IF LP . error RP Stmt ELSE Stmt

    error  shift, and go to state 108
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 109


State 82

   38 Stmt: WHILE LP . Exp RP Stmt
   43     | WHILE LP . error RP Stmt

    error  shift, and go to state 110
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 111


State 83

   65 Exp: ID LP . Args RP
   66    | ID LP . RP

    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67
    RP     shift, and go to state 112

    Exp   go to state 113
    Args  go to state 114


State 84

   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   63    | MINUS Exp .
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error

    STAR  shift, and go to state 96
    DIV   shift, and go to state 97
    DOT   shift, and go to state 100
    LB    shift, and go to state 101

    $default  reduce using rule 63 (Exp)


State 85

   80 Exp: NOT error .

    $default  reduce using rule 80 (Exp)


State 86

   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   64    | NOT Exp .
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error

    DOT  shift, and go to state 100
    LB   shift, and go to state 101

    $default  reduce using rule 64 (Exp)


State 87

   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   62    | LP Exp . RP
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error

    ASSIGNOP  shift, and go to state 92
    RELOP     shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    RP        shift, and go to state 115
    LB        shift, and go to state 101


State 88

   30 CompSt: LC error StmtList RC .

    $default  reduce using rule 30 (CompSt)


State 89

   31 StmtList: Stmt StmtList .

    $default  reduce using rule 31 (StmtList)


State 90

   44 Stmt: Exp error .

    $default  reduce using rule 44 (Stmt)


State 91

   33 Stmt: Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 92

   54 Exp: Exp ASSIGNOP . Exp
   72    | Exp ASSIGNOP . error

    error  shift, and go to state 116
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 117


State 93

   57 Exp: Exp RELOP . Exp
   75    | Exp RELOP . error

    error  shift, and go to state 118
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 119


State 94

   58 Exp: Exp PLUS . Exp
   76    | Exp PLUS . error

    error  shift, and go to state 120
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 121


State 95

   59 Exp: Exp MINUS . Exp
   77    | Exp MINUS . error

    error  shift, and go to state 122
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 123


State 96

   60 Exp: Exp STAR . Exp
   78    | Exp STAR . error

    error  shift, and go to state 124
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 125


State 97

   61 Exp: Exp DIV . Exp
   79    | Exp DIV . error

    error  shift, and go to state 126
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 127


State 98

   55 Exp: Exp AND . Exp
   73    | Exp AND . error

    error  shift, and go to state 128
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 129


State 99

   56 Exp: Exp OR . Exp
   74    | Exp OR . error

    error  shift, and go to state 130
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 131


State 100

   68 Exp: Exp DOT . ID

    ID  shift, and go to state 132


State 101

   67 Exp: Exp LB . Exp RB

    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 133


State 102

   29 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 29 (CompSt)


State 103

   53 Dec: VarDec ASSIGNOP Exp .
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error

    ASSIGNOP  shift, and go to state 92
    RELOP     shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    LB        shift, and go to state 101

    $default  reduce using rule 53 (Dec)


State 104

   51 DecList: Dec COMMA DecList .

    $default  reduce using rule 51 (DecList)


State 105

   40 Stmt: RETURN error SEMI .

    $default  reduce using rule 40 (Stmt)


State 106

   45 Stmt: RETURN Exp error .

    $default  reduce using rule 45 (Stmt)


State 107

   35 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 35 (Stmt)


State 108

   41 Stmt: IF LP error . RP Stmt
   42     | IF LP error . RP Stmt ELSE Stmt

    RP  shift, and go to state 134


State 109

   36 Stmt: IF LP Exp . RP Stmt
   37     | IF LP Exp . RP Stmt ELSE Stmt
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error

    ASSIGNOP  shift, and go to state 92
    RELOP     shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    RP        shift, and go to state 135
    LB        shift, and go to state 101


State 110

   43 Stmt: WHILE LP error . RP Stmt

    RP  shift, and go to state 136


State 111
